--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
 language: node_js
-matrix:
-  include:
-  - node_js: "lts/argon"
-    env: KOA_VERSION=1
-  - node_js: "lts/boron"
-    env: KOA_VERSION=1
-  - node_js: "stable"
-    env: KOA_VERSION=1
-  - node_js: "stable"
-    env: KOA_VERSION=2
+
+node_js:
+- lts/boron
+- lts/carbon
+- lts/dubnium
+- node
+
+env:
+- KOA_VERSION=1
+- KOA_VERSION=2
+
 before_script:
   - npm remove koa
   - npm install koa@$KOA_VERSION
